--- a/manifest.json
+++ b/manifest.json
@@ -26,13 +26,9 @@
     ],
   "content_scripts": [
     {
-      "matches": [
-        "http://*/*",
-        "https://*/*"
-      ],
-      "js": [
-        "common/common.js", "content_scripts/utils.js", "content_scripts/content.js"
-      ],
+      "matches": ["http://*/*","https://*/*"],
+      "js": ["common/common.js", "content_scripts/utils.js", "content_scripts/content.js"],
+      "css" : ["content_scripts/content.css"],
       "run_at": "document_end"
     }
   ]
